[tool.poetry]
name = "promail-template"
version = "0.1.0"
description = ""
authors = ["Antoine Wood <antoinewood@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
mjml = "^0.7.0"
Jinja2 = "^3.1.2"
jsonschema = "^4.5.1"
genson = "^1.2.2"
click = "^8.1.3"
nox = "^2022.1.7"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
coverage = {extras = ["toml"], version = "^6.3.3"}
pytest-cov = "^3.0.0"
flake8 = "^4.0.1"
black = "^22.3.0"
flake8-black = "^0.3.3"
flake8-import-order = "^0.18.1"
flake8-bugbear = "^22.4.25"
safety = "^1.10.3"
mypy = "^0.950"
flake8-annotations = "^2.9.0"
typeguard = "^2.13.3"
flake8-docstrings = "^1.6.0"
darglint = "^1.8.1"
xdoctest = "^1.0.0"
Sphinx = "^4.5.0"
sphinx-autodoc-typehints = "^1.18.1"
codecov = "^2.1.12"
flake8-bandit = "^3.0.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
promail-template = "promail_template.console:main"

# pyproject.toml
[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["promail_template"]

[tool.coverage.report]
show_missing = true
fail_under = 10